Thu Oct 18 17:51:07 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/drivers.list: add Belkin F6H375-USB compatibility through
   megatec_usb (depending on vendorid)

Mon Oct 15 11:14:06 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - data/drivers.list: add Powerware 9110 compatibility through upscode2

Mon Oct 15 08:12:28 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - scripts/udev/nut-usbups.rules.in: Make udev rules compatible with
   newer kernels compiled without CONFIG_USB_DEVICE_CLASS.

2.2.1-pre1

Tue Oct  2 12:04:27 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - Changelog: some reformating.
 - NEWS: completion for the upcoming 2.2.1 release.
 - data/driver.list: added MGE Office Protection Systems compatibility
   information for US models.
 - configure.in: change version to 2.2.1-pre1.

Fri Sep 28 15:56:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 Backported from the trunk:
 - improved usbhid-ups driver
 - support for the Liebert PowerSure Personal XT
 - naming change of the 'beeper.(on|off)' to 'beeper.(enable|disable|mute)'
 - coding changes without impact on the functional behaviour

Wed Sep 26 20:50:15 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed the 'ups.voltage.nominal' to 'output.voltage.nominal' in bcmxcp driver.

Mon Sep 24 18:01:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - conf/upsmon.conf.sample: List the default values for NOTIFYMSG
   and NOTIFYFLAG. [Alioth Feature Requests #302016]

Tue Sep 18 18:13:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.c: Always check the validity of a HID-to-NUT
   mapping (instcmd and setvar). It's pointless to try to change a
   variable or execute a command that isn't valid for *this* UPS.

Wed Sep 12 22:09:11 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: backported from the trunk.
 - drivers/megatec_usb.c: added ser_set_dtr/ser_set_rts stubs required
   by the megatec backport.