@@ -1,3 +1,7 @@
+Sun Nov  4 20:08:53 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/hidparser.c: Fix non-portable type conversions.
+
 Thu Oct 18 17:51:07 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
 
  - data/drivers.list: add Belkin F6H375-USB compatibility through
